--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
       <div class="main__wrapper">
         <div class="overlay" style="width: 100vw"></div>
         <div class="main__content" style="display: flex; justify-content: flex-start">
-          <!-- <div class="main__text">welcome</div> -->
+          <div class="main__text">welcome</div>
           <div class="logo__wrapper">
             <img src="./assets/img/Jeynix.svg" alt="logo" class="logo active" />
             <div class="logo__text active">Made in Ukraine</div>
@@ -171,6 +171,17 @@
             </div>
           </section>
           <div class="content">
+            <section class="order" id="initial-screen">
+              <div class="order__wrapper">
+                <div class="order__video-wrapper">
+                  <img src="./assets/img/background1.jpg" alt="image" class="order__img" />
+                  <div class="order__overlay"></div>
+                </div>
+                <h2 class="headline__heading" style="text-align: center">
+                  <span class="headline__highlight">Caption subtitle</span>
+                </h2>
+              </div>
+            </section>
             <section class="headline" id="make-video" style="width: 100%">
               <div class="headline__wrapper">
                 <img
@@ -193,7 +204,7 @@
                 </div>
               </div>
             </section>
-            <section class="order" id="deep-fake" style="margin-bottom: 154px">
+            <section class="order" id="deep-fake">
               <div class="order__wrapper">
                 <div class="back-menu">
                   <img src="./assets/img/arrowLeft.svg" alt="arrowLeft" />
