--- a/src/index.html
+++ b/src/index.html
@@ -122,54 +122,50 @@
             <img src="./assets/img/Jeynix.svg" alt="logo" class="logo active" />
             <span class="logo__text active">Made in Ukraine</span>
           </a>
+          <!-- <div class="main__description">
+            <h1 id="english">
+              Sorry, but the site is still in development, but that does not mean that we do not
+              work, if you have any questions, feel free to ask us or look at our work in social
+              networks.
+            </h1>
+            <h1 id="ukrainian">
+              Вибачте, але сайт все ще в розробці, але це не означає, що ми не працюємо, якщо у вас
+              є якісь питання, не соромтеся задавати їх нам або подивіться на наші роботи в
+              соціальних мережах.
+            </h1>
+          </div> -->
           <section class="menu" style="display: flex">
             <div class="menu__wrapper">
               <nav class="navigation">
                 <div class="navigation__item">
-                  <a href="#make-video" class="navigation__link en visible">
-                    Make-up on video
+                  <a href="#make-video" class="navigation__link"
+                    ><span>Make-up on video</span>
                     <img class="navigation__arrow" src="./assets/img/arrow.png"
                   /></a>
-                  <a href="#make-video" class="navigation__link uk">
-                    Візаж на відео <img class="navigation__arrow" src="./assets/img/arrow.png" />
-                  </a>
                 </div>
                 <div class="navigation__item">
-                  <a href="#deep-fake" class="navigation__link en visible"
+                  <a href="#deep-fake" class="navigation__link"
                     >Deep fake <img class="navigation__arrow" src="./assets/img/arrow.png"
                   /></a>
-                  <a href="#deep-fake" class="navigation__link uk"
-                    >Діп фейк <img class="navigation__arrow" src="./assets/img/arrow.png"
-                  /></a>
                 </div>
                 <div class="navigation__item">
-                  <a href="#old-videos" class="navigation__link en visible"
-                    >Restore old video <img class="navigation__arrow" src="./assets/img/arrow.png"
-                  /></a>
-                  <a href="#old-videos" class="navigation__link uk"
-                    >Відновити старе відео
-                    <img class="navigation__arrow" src="./assets/img/arrow.png"
+                  <a href="#old-videos" class="navigation__link"
+                    >Revisit old video <img class="navigation__arrow" src="./assets/img/arrow.png"
                   /></a>
                 </div>
               </nav>
               <div class="links">
                 <div class="links__wrapper">
                   <div class="links__item">
-                    <a href="#about" class="links__link en visible">About us</a>
-                    <a href="#about" class="links__link uk">Про нас</a>
+                    <a href="#about" class="links__link">About us</a>
                   </div>
                   <div class="links__item">
-                    <a href="#contacts" class="links__link en visible">Contacts</a>
-                    <a href="#contacts" class="links__link uk">Контакти</a>
+                    <a href="#contacts" class="links__link">Contacts</a>
                   </div>
                 </div>
-                <p class="links__description en visible">
+                <p class="links__description">
                   Project mission is to enable the creation of a type of video content by the
                   application of deep technologies
-                </p>
-                <p class="links__description uk">
-                  Місія проекту полягає в тому, щоб зробити можливим створення відеоконтенту шляхом
-                  застосуванням глибоких технологій
                 </p>
               </div>
             </div>
@@ -178,8 +174,7 @@
             <section class="order" id="initial-screen">
               <div class="back-menu" style="position: absolute; left: 16px; top: 0">
                 <img src="./assets/img/arrowLeft.svg" alt="arrowLeft" />
-                <span class="en visible">Back to menu</span>
-                <span class="uk">Назад до меню</span>
+                Back to menu
               </div>
               <div class="order__wrapper">
                 <div class="order__video-wrapper initial-wrapper">
@@ -190,52 +185,29 @@
                   />
                   <div class="order__overlay"></div>
                 </div>
-                <h2 class="headline__heading en visible" style="text-align: center">
+                <h2 class="headline__heading" style="text-align: center">
                   <span class="headline__highlight">Caption subtitle</span>
-                </h2>
-                <h2 class="headline__heading uk" style="text-align: center">
-                  <span class="headline__highlight">Підзаголовок</span>
                 </h2>
               </div>
             </section>
-            <section class="headline order" id="make-video">
-              <div class="order__wrapper">
-                <div class="back-menu">
-                  <img src="./assets/img/arrowLeft.svg" alt="arrowLeft" />
-                  <span class="en visible">Back to menu</span>
-                  <span class="uk">Назад до меню</span>
-                </div>
-
-                <div class="order__video-wrapper">
-                  <iframe
-                    class="order__video"
-                    src="https://www.youtube.com/embed/tgbNymZ7vqY?wmode=transparent"
-                    scrolling="no"
-                  ></iframe>
-                  <div class="order__overlay"></div>
-                </div>
-                <h2 class="headline__heading en visible">
+            <section class="headline" id="make-video" style="width: 100%">
+              <div class="headline__wrapper">
+                <img
+                  srcset="./assets/img/face.png 320w, ./assets/img/faceBig.png 769w"
+                  alt="face"
+                  class="headline__image"
+                />
+                <h2 class="headline__heading">
                   <span class="headline__highlight">Create any HD deepfake,</span> with no
                   limitation
                 </h2>
-                <h2 class="headline__heading uk">
-                  <span class="headline__highlight">Створюйте будь-який HD deepfake,</span> без
-                  жодних обмеження
-                </h2>
-                <p class="headline__description en visible">
+                <p class="headline__description">
                   Replace the face of the person(s) in your video with the face of anyone else you’d
                   like. Create your deepfake HD video in just a few seconds! Simply upload your HD
                   video, select one of your faces, and let our AI do the rest.
                 </p>
-                <p class="headline__description uk">
-                  Замініть обличчя людини (людей) у вашому відео на обличчя будь-кого іншого, кого б
-                  ви хотіли хочете. Створіть своє глибоко підроблене HD-відео всього за кілька
-                  секунд! Просто завантажте своє HD-відео відео, виберіть одне з ваших облич і
-                  дозвольте нашому штучному інтелекту зробити все інше.
-                </p>
                 <div class="headline__button-wrapper">
-                  <button class="headline__button en visible">Make an order</button>
-                  <button class="headline__button uk">Зробити замовлення</button>
+                  <button class="headline__button">Select a category</button>
                   <div class="headline__button-overlay"></div>
                 </div>
               </div>
@@ -244,8 +216,7 @@
               <div class="order__wrapper">
                 <div class="back-menu">
                   <img src="./assets/img/arrowLeft.svg" alt="arrowLeft" />
-                  <span class="en visible">Back to menu</span>
-                  <span class="uk">Назад до меню</span>
+                  Back to menu
                 </div>
                 <div class="order__video-wrapper">
                   <iframe
@@ -255,28 +226,17 @@
                   ></iframe>
                   <div class="order__overlay"></div>
                 </div>
-                <h2 class="headline__heading en visible">
+                <h2 class="headline__heading">
                   <span class="headline__highlight">Create any HD deepfake,</span> with no
                   limitation
                 </h2>
-                <h2 class="headline__heading uk">
-                  <span class="headline__highlight">Створюйте будь-який HD deepfake,</span> без
-                  жодних обмеження
-                </h2>
-                <p class="headline__description en visible">
+                <p class="headline__description">
                   Replace the face of the person(s) in your video with the face of anyone else you’d
                   like. Create your deepfake HD video in just a few seconds! Simply upload your HD
                   video, select one of your faces, and let our AI do the rest.
                 </p>
-                <p class="headline__description uk">
-                  Замініть обличчя людини (людей) у вашому відео на обличчя будь-кого іншого, кого б
-                  ви хотіли хочете. Створіть своє глибоко підроблене HD-відео всього за кілька
-                  секунд! Просто завантажте своє HD-відео відео, виберіть одне з ваших облич і
-                  дозвольте нашому штучному інтелекту зробити все інше.
-                </p>
                 <div class="headline__button-wrapper">
-                  <button class="headline__button en visible">Make an order</button>
-                  <button class="headline__button uk">Зробити замовлення</button>
+                  <button class="headline__button">Make an order</button>
                   <div class="headline__button-overlay"></div>
                 </div>
               </div>
@@ -287,10 +247,9 @@
               style="display: flex; align-items: center; position: relative"
             >
               <div class="order__wrapper" style="width: 100%">
-                <div class="back-menu">
+                <div class="back-menu" style="position: absolute; left: 16px; top: 0">
                   <img src="./assets/img/arrowLeft.svg" alt="arrowLeft" />
-                  <span class="en visible">Back to menu</span>
-                  <span class="uk">Назад до меню</span>
+                  Back to menu
                 </div>
                 <div class="order__video-wrapper">
                   <iframe
@@ -300,11 +259,8 @@
                   ></iframe>
                   <div class="order__overlay"></div>
                 </div>
-                <h2 class="headline__heading en visible">
+                <h2 class="headline__heading">
                   <span class="headline__highlight">Was ist das</span>
-                </h2>
-                <h2 class="headline__heading uk">
-                  <span class="headline__highlight">Що це</span>
                 </h2>
               </div>
             </section>
@@ -318,15 +274,13 @@
                 position: relative;
               "
             >
-              <div class="back-menu back-menu_about">
+              <div class="back-menu" style="position: absolute; left: 16px; top: 0">
                 <img src="./assets/img/arrowLeft.svg" alt="arrowLeft" />
-                <span class="en visible">Back to menu</span>
-                <span class="uk">Назад до меню</span>
+                Back to menu
               </div>
               <div class="contacts__wrapper">
                 <div style="display: flex; flex-direction: column; justify-content: center">
-                  <h3 class="contacts__heading en visible">Contacts</h3>
-                  <h3 class="contacts__heading uk">Контакти</h3>
+                  <h3 class="contacts__heading">Contacts</h3>
                   <a href="mailto:jeynixvfx@gmail.com" class="main__email">jeynixvfx@gmail.com</a>
                   <div class="main__socials socials">
                     <div class="socials__item">
@@ -385,17 +339,13 @@
               </div>
             </section>
             <section class="order" id="about" style="position: relative">
-              <div class="back-menu">
+              <div class="back-menu" style="position: absolute; left: 16px; top: 0">
                 <img src="./assets/img/arrowLeft.svg" alt="arrowLeft" />
-                <span class="en visible">Back to menu</span>
-                <span class="uk">Назад до меню</span>
+                Back to menu
               </div>
               <div class="order__wrapper">
-                <h2 class="headline__heading en visible" style="text-align: center">
+                <h2 class="headline__heading" style="text-align: center">
                   <span class="headline__highlight">Caption subtitle</span>
-                </h2>
-                <h2 class="headline__heading uk" style="text-align: center">
-                  <span class="headline__highlight">Підзаголовок</span>
                 </h2>
               </div>
             </section>
